# water-sort-solver

./: .bazelproject  .gitignore  .ijwb  BUILD.bazel  CLEANUP_SUMMARY.md  INTELLIJ_SETUP.md  README.md  WORKSPACE
.github/: BRANCH_PROTECTION.md  CI_README.md  CODEOWNERS
.github/workflows/: ci.yml  pr-checks.yml
src/: BUILD.bazel
src/solver/base/: Color.java  FlaskGameSolver.java  FlaskGameSolverMain.java  FlaskGameState.java  Move.java
src/solver/bfs/: FlaskGameSolverBfs.java
src/solver/old/: FlaskGameStateOld.java  FlaskGameStateOldCopy.java  FlaskGameStateOldTest.java
src/solver/test/: ColorTest.java  FlaskGameSolverMainTest.java  FlaskGameSolverTest.java  FlaskGameStateTest.java  MoveTest.java
